--- a/HotelManagementSystem/appsettings.json
+++ b/HotelManagementSystem/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+  "DefaultConnection": "Host=localhost;Port=5433;Database=hoteldb;Username=postgres;Password=admin"
+},
   "AllowedHosts": "*"
 }
+
